lib/less/engine/parser.rb
module Less
  include Treetop::Runtime

  def root
    @root || :primary
  end

  def _nt_primary
    start_index = index
    if node_cache[:primary].has_key?(index)
      cached = node_cache[:primary][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    s1, i1 = [], index
    loop do
      i2 = index
      r3 = _nt_declaration
      if r3
        r2 = r3
      else
        r4 = _nt_ruleset
        if r4
          r2 = r4
        else
          r5 = _nt_import
          if r5
            r2 = r5
          else
            r6 = _nt_comment
            if r6
              r2 = r6
            else
              @index = i2
              r2 = nil
            end
          end
        end
      end
      if r2
        s1 << r2
      else
        break
      end
    end
    if s1.empty?
      @index = i1
      r1 = nil
    else
      r1 = instantiate_node(Builder,input, i1...index, s1)
    end
    if r1
      r0 = r1
    else
      s7, i7 = [], index
      loop do
        r8 = _nt_declaration
        if r8
          s7 << r8
        else
          break
        end
      end
      r7 = instantiate_node(Builder,input, i7...index, s7)
      if r7
        r0 = r7
      else
        s9, i9 = [], index
        loop do
          r10 = _nt_import
          if r10
            s9 << r10
          else
            break
          end
        end
        r9 = instantiate_node(Builder,input, i9...index, s9)
        if r9
          r0 = r9
        else
          s11, i11 = [], index
          loop do
            r12 = _nt_comment
            if r12
              s11 << r12
            else
              break
            end
          end
          r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
          if r11
            r0 = r11
          else
            @index = i0
            r0 = nil
          end
        end
      end
    end

    node_cache[:primary][start_index] = r0

    r0
  end

  module Comment0
  end

  module Comment1
    def ws
      elements[0]
    end

    def ws
      elements[4]
    end
  end

  module Comment2
  end

  module Comment3
    def ws
      elements[0]
    end

    def ws
      elements[4]
    end
  end

  def _nt_comment
    start_index = index
    if node_cache[:comment].has_key?(index)
      cached = node_cache[:comment][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_ws
    s1 << r2
    if r2
      if has_terminal?('/*', false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 2))
        @index += 2
      else
        terminal_parse_failure('/*')
        r3 = nil
      end
      s1 << r3
      if r3
        s4, i4 = [], index
        loop do
          i5, s5 = index, []
          i6 = index
          if has_terminal?('*/', false, index)
            r7 = instantiate_node(SyntaxNode,input, index...(index + 2))
            @index += 2
          else
            terminal_parse_failure('*/')
            r7 = nil
          end
          if r7
            r6 = nil
          else
            @index = i6
            r6 = instantiate_node(SyntaxNode,input, index...index)
          end
          s5 << r6
          if r6
            if index < input_length
              r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("any character")
              r8 = nil
            end
            s5 << r8
          end
          if s5.last
            r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
            r5.extend(Comment0)
          else
            @index = i5
            r5 = nil
          end
          if r5
            s4 << r5
          else
            break
          end
        end
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
        s1 << r4
        if r4
          if has_terminal?('*/', false, index)
            r9 = instantiate_node(SyntaxNode,input, index...(index + 2))
            @index += 2
          else
            terminal_parse_failure('*/')
            r9 = nil
          end
          s1 << r9
          if r9
            r10 = _nt_ws
            s1 << r10
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(Comment1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i11, s11 = index, []
      r12 = _nt_ws
      s11 << r12
      if r12
        if has_terminal?('//', false, index)
          r13 = instantiate_node(SyntaxNode,input, index...(index + 2))
          @index += 2
        else
          terminal_parse_failure('//')
          r13 = nil
        end
        s11 << r13
        if r13
          s14, i14 = [], index
          loop do
            i15, s15 = index, []
            i16 = index
            if has_terminal?("\n", false, index)
              r17 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("\n")
              r17 = nil
            end
            if r17
              r16 = nil
            else
              @index = i16
              r16 = instantiate_node(SyntaxNode,input, index...index)
            end
            s15 << r16
            if r16
              if index < input_length
                r18 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure("any character")
                r18 = nil
              end
              s15 << r18
            end
            if s15.last
              r15 = instantiate_node(SyntaxNode,input, i15...index, s15)
              r15.extend(Comment2)
            else
              @index = i15
              r15 = nil
            end
            if r15
              s14 << r15
            else
              break
            end
          end
          r14 = instantiate_node(SyntaxNode,input, i14...index, s14)
          s11 << r14
          if r14
            if has_terminal?("\n", false, index)
              r19 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("\n")
              r19 = nil
            end
            s11 << r19
            if r19
              r20 = _nt_ws
              s11 << r20
            end
          end
        end
      end
      if s11.last
        r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
        r11.extend(Comment3)
      else
        @index = i11
        r11 = nil
      end
      if r11
        r0 = r11
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:comment][start_index] = r0

    r0
  end

  module Ruleset0
    def selectors
      elements[0]
    end

    def ws
      elements[2]
    end

    def primary
      elements[3]
    end

    def ws
      elements[4]
    end

    def ws
      elements[6]
    end
  end

  module Ruleset1
    def build env
      # Build the ruleset for each selector
      selectors.build(env, :ruleset).each do |sel|
        primary.build sel
      end
    end
  end

  module Ruleset2
    def ws
      elements[0]
    end

    def selectors
      elements[1]
    end

    def ws
      elements[3]
    end
  end

  module Ruleset3
    def build env        
      selectors.build(env, :mixin).each do |path|
        rules = path.inject(env.root) do |current, node|
          current.descend(node.selector, node) or raise MixinNameError, path.join
        end.rules
        env.rules += rules
      end
    end
  end

  def _nt_ruleset
    start_index = index
    if node_cache[:ruleset].has_key?(index)
      cached = node_cache[:ruleset][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_selectors
    s1 << r2
    if r2
      if has_terminal?("{", false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("{")
        r3 = nil
      end
      s1 << r3
      if r3
        r4 = _nt_ws
        s1 << r4
        if r4
          r5 = _nt_primary
          s1 << r5
          if r5
            r6 = _nt_ws
            s1 << r6
            if r6
              if has_terminal?("}", false, index)
                r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure("}")
                r7 = nil
              end
              s1 << r7
              if r7
                r8 = _nt_ws
                s1 << r8
              end
            end
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(Ruleset0)
      r1.extend(Ruleset1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i9, s9 = index, []
      r10 = _nt_ws
      s9 << r10
      if r10
        r11 = _nt_selectors
        s9 << r11
        if r11
          if has_terminal?(';', false, index)
            r12 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(';')
            r12 = nil
          end
          s9 << r12
          if r12
            r13 = _nt_ws
            s9 << r13
          end
        end
      end
      if s9.last
        r9 = instantiate_node(SyntaxNode,input, i9...index, s9)
        r9.extend(Ruleset2)
        r9.extend(Ruleset3)
      else
        @index = i9
        r9 = nil
      end
      if r9
        r0 = r9
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:ruleset][start_index] = r0

    r0
  end

  module Import0
    def S
      elements[1]
    end

    def url
      elements[2]
    end

    def s
      elements[4]
    end

    def ws
      elements[6]
    end
  end

  module Import1
    def build env
      path = File.join(env.root.file, url.value)
      path += '.less' unless path =~ /\.(le|c)ss$/
      if File.exist? path
        imported = Less::Engine.new(File.new(path)).to_tree
        env.rules += imported.rules
      else
        raise ImportError, path
      end
    end
  end

  def _nt_import
    start_index = index
    if node_cache[:import].has_key?(index)
      cached = node_cache[:import][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("@import", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 7))
      @index += 7
    else
      terminal_parse_failure("@import")
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_S
      s0 << r2
      if r2
        i3 = index
        r4 = _nt_string
        if r4
          r3 = r4
        else
          r5 = _nt_url
          if r5
            r3 = r5
          else
            @index = i3
            r3 = nil
          end
        end
        s0 << r3
        if r3
          r7 = _nt_medias
          if r7
            r6 = r7
          else
            r6 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r6
          if r6
            r8 = _nt_s
            s0 << r8
            if r8
              if has_terminal?(';', false, index)
                r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure(';')
                r9 = nil
              end
              s0 << r9
              if r9
                r10 = _nt_ws
                s0 << r10
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Import0)
      r0.extend(Import1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:import][start_index] = r0

    r0
  end

  module Url0
    def path
      elements[1]
    end

  end

  module Url1
    def build env = nil
      Node::String.new CGI.unescape(path.text_value)
    end
    
    def value
      build
    end
  end

  def _nt_url
    start_index = index
    if node_cache[:url].has_key?(index)
      cached = node_cache[:url][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('url(', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 4))
      @index += 4
    else
      terminal_parse_failure('url(')
      r1 = nil
    end
    s0 << r1
    if r1
      i2 = index
      r3 = _nt_string
      if r3
        r2 = r3
      else
        s4, i4 = [], index
        loop do
          if has_terminal?('\G[-a-zA-Z0-9_%$/.&=:;#+?]', true, index)
            r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            r5 = nil
          end
          if r5
            s4 << r5
          else
            break
          end
        end
        if s4.empty?
          @index = i4
          r4 = nil
        else
          r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
        end
        if r4
          r2 = r4
        else
          @index = i2
          r2 = nil
        end
      end
      s0 << r2
      if r2
        if has_terminal?(')', false, index)
          r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(')')
          r6 = nil
        end
        s0 << r6
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Url0)
      r0.extend(Url1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:url][start_index] = r0

    r0
  end

  module Medias0
    def s
      elements[0]
    end

    def s
      elements[2]
    end

  end

  module Medias1
  end

  def _nt_medias
    start_index = index
    if node_cache[:medias].has_key?(index)
      cached = node_cache[:medias][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    s1, i1 = [], index
    loop do
      if has_terminal?('\G[-a-z]', true, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        r2 = nil
      end
      if r2
        s1 << r2
      else
        break
      end
    end
    if s1.empty?
      @index = i1
      r1 = nil
    else
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
    end
    s0 << r1
    if r1
      s3, i3 = [], index
      loop do
        i4, s4 = index, []
        r5 = _nt_s
        s4 << r5
        if r5
          if has_terminal?(',', false, index)
            r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(',')
            r6 = nil
          end
          s4 << r6
          if r6
            r7 = _nt_s
            s4 << r7
            if r7
              s8, i8 = [], index
              loop do
                if has_terminal?('\G[a-z]', true, index)
                  r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  r9 = nil
                end
                if r9
                  s8 << r9
                else
                  break
                end
              end
              if s8.empty?
                @index = i8
                r8 = nil
              else
                r8 = instantiate_node(SyntaxNode,input, i8...index, s8)
              end
              s4 << r8
            end
          end
        end
        if s4.last
          r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
          r4.extend(Medias0)
        else
          @index = i4
          r4 = nil
        end
        if r4
          s3 << r4
        else
          break
        end
      end
      r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
      s0 << r3
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Medias1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:medias][start_index] = r0

    r0
  end

  module Selectors0
    def s
      elements[0]
    end

    def ws
      elements[2]
    end

    def selector
      elements[3]
    end
  end

  module Selectors1
    def ws
      elements[0]
    end

    def selector
      elements[1]
    end

    def tail
      elements[2]
    end

    def ws
      elements[3]
    end
  end

  module Selectors2
    def build env, method 
      all.map do |e|
        e.send(method, env) if e.respond_to? method
      end.compact
    end
    
    def all
      [selector] + tail.elements.map {|e| e.selector }
    end
  end

  def _nt_selectors
    start_index = index
    if node_cache[:selectors].has_key?(index)
      cached = node_cache[:selectors][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_ws
    s0 << r1
    if r1
      r2 = _nt_selector
      s0 << r2
      if r2
        s3, i3 = [], index
        loop do
          i4, s4 = index, []
          r5 = _nt_s
          s4 << r5
          if r5
            if has_terminal?(',', false, index)
              r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure(',')
              r6 = nil
            end
            s4 << r6
            if r6
              r7 = _nt_ws
              s4 << r7
              if r7
                r8 = _nt_selector
                s4 << r8
              end
            end
          end
          if s4.last
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            r4.extend(Selectors0)
          else
            @index = i4
            r4 = nil
          end
          if r4
            s3 << r4
          else
            break
          end
        end
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
        s0 << r3
        if r3
          r9 = _nt_ws
          s0 << r9
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Selectors1)
      r0.extend(Selectors2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:selectors][start_index] = r0

    r0
  end

  module Selector0
    def s
      elements[0]
    end

    def select
      elements[1]
    end

    def element
      elements[2]
    end

    def s
      elements[3]
    end
  end

  module Selector1
    def sel
      elements[0]
    end

  end

  module Selector2
    def ruleset env
      sel.elements.inject(env) do |node, e|
        node << Node::Element.new(e.element.text_value, e.select.text_value)
        node.last
      end
    end
    
    def mixin env
      sel.elements.map do |e|
        Node::Element.new(e.element.text_value, e.select.text_value)
      end
    end
  end

  def _nt_selector
    start_index = index
    if node_cache[:selector].has_key?(index)
      cached = node_cache[:selector][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    s1, i1 = [], index
    loop do
      i2, s2 = index, []
      r3 = _nt_s
      s2 << r3
      if r3
        r4 = _nt_select
        s2 << r4
        if r4
          r5 = _nt_element
          s2 << r5
          if r5
            r6 = _nt_s
            s2 << r6
          end
        end
      end
      if s2.last
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
        r2.extend(Selector0)
      else
        @index = i2
        r2 = nil
      end
      if r2
        s1 << r2
      else
        break
      end
    end
    if s1.empty?
      @index = i1
      r1 = nil
    else
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
    end
    s0 << r1
    if r1
      r8 = _nt_arguments
      if r8
        r7 = r8
      else
        r7 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r7
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Selector1)
      r0.extend(Selector2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:selector][start_index] = r0

    r0
  end

  module Declaration0
    def ws
      elements[0]
    end

  end

  module Declaration1
    def ws
      elements[0]
    end

    def name
      elements[1]
    end

    def s
      elements[2]
    end

    def s
      elements[4]
    end

    def expressions
      elements[5]
    end

    def s
      elements[6]
    end

    def ws
      elements[8]
    end
  end

  module Declaration2
    def build env
      env << (name.text_value =~ /^@/ ? 
        Node::Variable : Node::Property).new(name.text_value, expressions.build(env), env)

    end
  # Empty rule
  end

  module Declaration3
    def ws
      elements[0]
    end

    def ident
      elements[1]
    end

    def s
      elements[2]
    end

    def s
      elements[4]
    end

    def ws
      elements[6]
    end
  end

  def _nt_declaration
    start_index = index
    if node_cache[:declaration].has_key?(index)
      cached = node_cache[:declaration][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_ws
    s1 << r2
    if r2
      i3 = index
      r4 = _nt_ident
      if r4
        r3 = r4
      else
        r5 = _nt_variable
        if r5
          r3 = r5
        else
          @index = i3
          r3 = nil
        end
      end
      s1 << r3
      if r3
        r6 = _nt_s
        s1 << r6
        if r6
          if has_terminal?(':', false, index)
            r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(':')
            r7 = nil
          end
          s1 << r7
          if r7
            r8 = _nt_s
            s1 << r8
            if r8
              r9 = _nt_expressions
              s1 << r9
              if r9
                r10 = _nt_s
                s1 << r10
                if r10
                  i11 = index
                  if has_terminal?(';', false, index)
                    r12 = instantiate_node(SyntaxNode,input, index...(index + 1))
                    @index += 1
                  else
                    terminal_parse_failure(';')
                    r12 = nil
                  end
                  if r12
                    r11 = r12
                  else
                    i13, s13 = index, []
                    r14 = _nt_ws
                    s13 << r14
                    if r14
                      i15 = index
                      if has_terminal?('}', false, index)
                        r16 = instantiate_node(SyntaxNode,input, index...(index + 1))
                        @index += 1
                      else
                        terminal_parse_failure('}')
                        r16 = nil
                      end
                      if r16
                        @index = i15
                        r15 = instantiate_node(SyntaxNode,input, index...index)
                      else
                        r15 = nil
                      end
                      s13 << r15
                    end
                    if s13.last
                      r13 = instantiate_node(SyntaxNode,input, i13...index, s13)
                      r13.extend(Declaration0)
                    else
                      @index = i13
                      r13 = nil
                    end
                    if r13
                      r11 = r13
                    else
                      @index = i11
                      r11 = nil
                    end
                  end
                  s1 << r11
                  if r11
                    r17 = _nt_ws
                    s1 << r17
                  end
                end
              end
            end
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(Declaration1)
      r1.extend(Declaration2)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i18, s18 = index, []
      r19 = _nt_ws
      s18 << r19
      if r19
        r20 = _nt_ident
        s18 << r20
        if r20
          r21 = _nt_s
          s18 << r21
          if r21
            if has_terminal?(':', false, index)
              r22 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure(':')
              r22 = nil
            end
            s18 << r22
            if r22
              r23 = _nt_s
              s18 << r23
              if r23
                if has_terminal?(';', false, index)
                  r24 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure(';')
                  r24 = nil
                end
                s18 << r24
                if r24
                  r25 = _nt_ws
                  s18 << r25
                end
              end
            end
          end
        end
      end
      if s18.last
        r18 = instantiate_node(SyntaxNode,input, i18...index, s18)
        r18.extend(Declaration3)
      else
        @index = i18
        r18 = nil
      end
      if r18
        r0 = r18
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:declaration][start_index] = r0

    r0
  end

  module Expressions0
    def build env
      elements.map do |e|
        e.build(env) if e.respond_to? :build
      end.compact
    end
  end

  def _nt_expressions
    start_index = index
    if node_cache[:expressions].has_key?(index)
      cached = node_cache[:expressions][index]
      @index = cached.interval.end if cached
      return cached
    end

    s0, i0 = [], index
    loop do
      r1 = _nt_expression
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Expressions0)
    end

    node_cache[:expressions][start_index] = r0

    r0
  end

  module Expression0
    def s
      elements[0]
    end

    def s
      elements[2]
    end

    def expressions
      elements[3]
    end

    def s
      elements[4]
    end

    def s
      elements[6]
    end
  end

  module Expression1
    def build env
      Node::Expression.new(['('] + expressions.build(env).flatten + [')'])
    end
  end

  module Expression2
    def operator
      elements[0]
    end

    def entity
      elements[1]
    end
  end

  module Expression3
    def entity
      elements[0]
    end

    def tail
      elements[1]
    end

    def ws
      elements[2]
    end
  end

  module Expression4
    def build env 
      exp = all.map do |e|
        e.method(:build).arity.zero?? 
          e.build : e.build(env) if e.respond_to? :build
      end.dissolve
      exp.is_a?(Array) ? Node::Expression.new(exp) : exp
    end
    
    def all
      [entity] + tail.elements.map {|i| [i.operator, i.entity] }.flatten.compact
    end
  end

  def _nt_expression
    start_index = index
    if node_cache[:expression].has_key?(index)
      cached = node_cache[:expression][index]
      @index = cached.interval.end if cached
      return cached
    end
